# compute-service

./: .env.example  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  sitemap.xml
.github/workflows/: docs.yml
ansible/: inventory.example.yml  playbook.yml  vars.example.yml
api-reference/: index.html
client/caas-client/: index.html
client/dispatch-magic/: index.html
client/installation/: index.html
client/job-registry/: index.html
client/mcp-server/: index.html
clients/python/: pyproject.toml
clients/python/caas/: __init__.py  client.py  magic.py
clients/python/mcp/: pyproject.toml
clients/python/mcp/caas_mcp/: __init__.py  config.py  server.py
clients/python/mcp/tests/: test_config.py  test_server.py
clients/python/tests/: conftest.py  test_client.py  test_magic.py
configuration/: index.html
cookbooks/custom-image/: index.html
cookbooks/first-cell/: index.html
cookbooks/gpu-workload/: index.html
dispatcher/: Dockerfile  build.sh  compute-service.service.example  docker-compose.yml  requirements-dev.txt  requirements.txt
docker/: build-remote.sh
docs/: api-reference.md  configuration.md  index.md  quickstart.md
quickstart/: index.html
scripts/: bootstrap.sh  smoke_test.py  smoke_test.sh
search/: search_index.json
tests/: conftest.py  test_api_extensions.py  test_config.py  test_env_plugin_loader.py  test_execute.py  test_execute_cell.py  test_health.py  test_jobs.py  test_logs.py  test_plugin_lifecycle_hooks.py  test_queue.py  test_sandbox.py  test_ui.py
ui/: index.html
(+39 files in other folders)
