[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caas-client"
version = "0.1.0"
description = "Client library and IPython magic for compute-as-a-service dispatch"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
notebook = ["ipython>=8.0"]
dev = ["pytest>=8.0", "ipython>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["caas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
