[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caas-mcp"
version = "0.1.0"
description = "MCP server exposing compute-as-a-service as discoverable tools"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "caas-client>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["caas_mcp"]

[tool.hatch.build.targets.wheel.sources]
"caas_mcp" = "caas_mcp"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
caas-mcp = "caas_mcp.server:main"

[tool.uv.sources]
caas-client = { path = "../", editable = true }
